--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.22MB/s(Youtube:不良林), server: 172.99.188.71, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇩🇪 德国-259.7KB/s(Youtube:不良林), server: 5.183.179.141, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
-  - {name: 🇺🇸 美国-364.3KB/s(Youtube:不良林), server: hk01.bosaidong.buzz, port: 80, type: vmess, uuid: 2adef817-ff89-4d0c-8782-694ba4e8d899, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hk01.bosaidong.buzz}}
-  - {name: 🇷🇺 俄罗斯联邦-438.1KB/s(Youtube:不良林), server: 213.183.53.202, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
-  - {name: 🇯🇵 日本-4.59MB/s(Youtube:不良林), server: jp03-vm0.entry.ikuuu.casa, port: 448, type: vmess, uuid: 811ccaad-9a0c-3363-85fe-6ff4a686f58b, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: jp03-vm0.entry.ikuuu.casa}}
+  - {name: 🇯🇵 日本-4.99MB/s(Youtube:不良林), server: jp04-vm0.entry.ikuuu.casa, port: 447, type: vmess, uuid: f5896503-9069-3967-8979-14af86f5ac96, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp04-vm0.entry.ikuuu.casa}}
+  - {name: 🇩🇪 德国-1.65MB/s(Youtube:不良林), server: 5.183.179.166, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
+  - {name: 🇷🇺 俄罗斯联邦-742.7KB/s(Youtube:不良林), server: 213.183.53.202, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
+  - {name: 🇷🇺 俄罗斯联邦-405.0KB/s(Youtube:不良林), server: 213.183.53.200, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
+  - {name: 🇩🇪 德国-2.19MB/s(Youtube:不良林), server: 5.183.179.141, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
   - {name: 🇺🇸 美国-2.75MB/s(Youtube:不良林), server: 169.197.142.39, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-3.22MB/s(Youtube:不良林), server: 169.197.142.39, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-2.00MB/s(Youtube:不良林), server: 134.195.196.128, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-3.59MB/s(Youtube:不良林), server: 169.197.142.39, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-1.35MB/s(Youtube:不良林), server: 169.197.142.39, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-2.81MB/s(Youtube:不良林), server: 169.197.142.39, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇩🇪 德国-259.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-438.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.99MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-742.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-405.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇩🇪 德国-259.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-438.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.99MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-742.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-405.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇩🇪 德国-259.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-438.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.99MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-742.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-405.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇩🇪 德国-259.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-438.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.99MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-742.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-405.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇩🇪 德国-259.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-438.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.99MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-742.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-405.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇩🇪 德国-259.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-438.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.99MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-742.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-405.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇩🇪 德国-259.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-438.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.99MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-742.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-405.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
