--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-4.99MB/s(Youtube:不良林), server: jp04-vm0.entry.ikuuu.casa, port: 447, type: vmess, uuid: f5896503-9069-3967-8979-14af86f5ac96, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp04-vm0.entry.ikuuu.casa}}
-  - {name: 🇩🇪 德国-1.65MB/s(Youtube:不良林), server: 5.183.179.166, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
-  - {name: 🇷🇺 俄罗斯联邦-742.7KB/s(Youtube:不良林), server: 213.183.53.202, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
-  - {name: 🇷🇺 俄罗斯联邦-405.0KB/s(Youtube:不良林), server: 213.183.53.200, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
-  - {name: 🇩🇪 德国-2.19MB/s(Youtube:不良林), server: 5.183.179.141, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇺🇸 美国-2.75MB/s(Youtube:不良林), server: 169.197.142.39, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-3.22MB/s(Youtube:不良林), server: 169.197.142.39, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-2.00MB/s(Youtube:不良林), server: 134.195.196.128, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇩🇪 德国-263.9KB/s(Youtube:不良林), server: 5.183.179.141, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
+  - {name: 🇺🇸 美国-2.89MB/s(Youtube:不良林), server: 38.68.134.71, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇷🇺 俄罗斯联邦-416.7KB/s(Youtube:不良林), server: 213.183.53.200, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇷🇺 俄罗斯联邦-246.0KB/s(Youtube:不良林), server: 213.183.53.200, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
+  - {name: 🇩🇪 德国-2.17MB/s(Youtube:不良林), server: 5.183.179.166, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
+  - {name: 🇺🇸 美国-2.42MB/s(Youtube:不良林), server: 169.197.142.39, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-2.87MB/s(Youtube:不良林), server: 169.197.142.39, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-1.52MB/s(Youtube:不良林), server: 134.195.196.128, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-1.35MB/s(Youtube:不良林), server: 169.197.142.39, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-2.81MB/s(Youtube:不良林), server: 169.197.142.39, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-4.99MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-742.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-405.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇩🇪 德国-263.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-416.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-246.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-4.99MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-742.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-405.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇩🇪 德国-263.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-416.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-246.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-4.99MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-742.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-405.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇩🇪 德国-263.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-416.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-246.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-4.99MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-742.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-405.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇩🇪 德国-263.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-416.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-246.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-4.99MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-742.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-405.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇩🇪 德国-263.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-416.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-246.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-4.99MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-742.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-405.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇩🇪 德国-263.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-416.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-246.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-4.99MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-742.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-405.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇩🇪 德国-263.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-416.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-246.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
 rules:
