--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-1.85MB/s(Youtube:不良林), server: 5.183.179.166, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇩🇪 德国-1.99MB/s(Youtube:不良林), server: 5.183.179.141, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇯🇵 日本-4.77MB/s(Youtube:不良林), server: jp06-vm0.entry.ikuuu.casa, port: 448, type: vmess, uuid: e1241a61-e533-3aa0-a25e-ad86cf34cd64, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: jp06-vm0.entry.ikuuu.casa}}
-  - {name: 🇺🇸 美国-2.97MB/s(Youtube:不良林), server: 38.68.134.71, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇳🇱 荷兰-1.51MB/s(Youtube:不良林), server: 213.183.51.172, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 🇺🇸 美国-2.42MB/s(Youtube:不良林), server: 169.197.142.39, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇩🇪 德国-1.72MB/s(Youtube:不良林), server: 5.183.179.166, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇷🇺 俄罗斯联邦-245.1KB/s(Youtube:不良林), server: 213.183.53.202, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇯🇵 日本-937.2KB/s(Youtube:不良林), server: jp02-vm0.entry.ikuuu.casa, port: 447, type: vmess, uuid: 1574e157-8b18-3ec3-9b68-fc744fe8fdeb, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: jp02-vm0.entry.ikuuu.casa}}
+  - {name: 🇺🇸 美国-2.99MB/s(Youtube:不良林), server: 38.68.134.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇷🇺 俄罗斯联邦-443.3KB/s(Youtube:不良林), server: 213.183.53.202, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
+  - {name: 🇺🇸 美国-3.17MB/s(Youtube:不良林), server: 169.197.142.39, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-1.86MB/s(Youtube:不良林), server: 169.197.142.39, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-2.87MB/s(Youtube:不良林), server: 169.197.142.39, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-1.52MB/s(Youtube:不良林), server: 134.195.196.128, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-1.35MB/s(Youtube:不良林), server: 169.197.142.39, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-2.81MB/s(Youtube:不良林), server: 169.197.142.39, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-1.85MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.99MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-245.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-937.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-443.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-1.85MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.99MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-245.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-937.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-443.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-1.85MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.99MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-245.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-937.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-443.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-1.85MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.99MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-245.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-937.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-443.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-1.85MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.99MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-245.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-937.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-443.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-1.85MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.99MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-245.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-937.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-443.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-1.85MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.99MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-245.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-937.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-443.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
 rules:
